# fabro

./: .env.example  .gitignore  00_READ_ME_FIRST.txt  00_START_HERE.md  AGENTS.md  BEFORE_AND_AFTER.md  CHECKLIST.md  CLAUDE.md  CODE_CONTEXT.txt  COMPLETION_REPORT.md  Cargo.toml  DELIVERABLES.txt  EXACT_FIX.patch  GITHUB_ISSUE_FIX.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MANIFEST.txt  PATCH.diff  README.md  README_GITHUB_ISSUE_12906.md  README_IMPLEMENTATION.md  SOLUTION.md  SOLUTION_SUMMARY.md  START_HERE.md  TEST_CASES_FOR_FIX.md  VERIFICATION_REPORT.txt  checkpoint.json  clippy.toml  django-autoreloader-30479.patch  docker-compose.local.yaml  graph.fabro  install.sh  manifest.json  run.json  sandbox.json  spec-dod.dot  sqlmigrate.py.fixed  start.json
.ai/prompts/: code-review-deep-1.md  code-review-deep-2.md  code-review-deep-3.md
.ai/reviews/: analyzed_bugs.xml  candidate_bugs.xml  false_positives.md  valid_bugs.xml
.claude/: settings.json
.config/: nextest.toml
.fabro/: project.toml
.github/: zizmor.yml
.github/workflows/: rust.yml  typescript.yml
apps/arc-web/: package.json
apps/fabro-web/: index.template.html  package.json  tsconfig.json
apps/marketing/: og-image-template.html  (+1 more)
docker/: Dockerfile.agent  demo-server.toml  docker-compose.yaml
docs/: docs.json
docs-internal/: events.md  logging-strategy.md  run-directory-keys.md  updating-web-screenshots.md
lib/crates/fabro-dump/: Cargo.toml
lib/crates/fabro-dump/src/: lib.rs
openapi/: arc-api.yaml
test/: branching.fabro  conditions.fabro  retro-e2e.dot
(+1395 files in other folders)
